--- a/app_students/templates/courses/list.html
+++ b/app_students/templates/courses/list.html
@@ -55,7 +55,7 @@
                                                         {% if course.image %}
                                                             <img src="{{ course.image }}" alt="image" class="img-fluid"/>
                                                         {% else %}
-                                                            <img src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" alt="image" class="img-fluid"/>
+                                                            <img src="{% static 'edutim/images/courses/NYC Construction Safety Training center.jpg' %}" alt="image" class="img-fluid"/>
                                                         {% endif %}
                                                     </div>
                                                 </div>
