--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -263,7 +263,7 @@
                 <div class="course-sidebar">
                     <div class="course-single-thumb">
 
-                        <img data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg"
+                        <img data-src="{% static 'edutim/images/courses/NYC Construction Safety Training.jpg' %}"
                             width="320" height="278" alt="course" class="img-fluid w-100 lazy" />
                         <div class="course-price-wrapper">
                             <div class="course-price">
