--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -147,7 +147,7 @@
                            <img
                               width="146"
                               height="182"
-                              data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg"
+                              data-src="{% static 'edutim/images/courses/NYC Construction Safety Training.jpg' %}"
                               alt="image"
                               title="{{ course.title }}"
                               class="lazy img-fluid rounded-0"
