updated course images

--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -118,7 +118,7 @@ Best Safety Training and Certification Courses Online | pdhsafety.com
                     <div class="course-img">
                         <a class="text-dark" href="{% url 'course_detail' course.slug %}">
                             <img width="348" height="281" 
-                            data-src="{% static 'edutim/images/courses/NYC Construction Safety Training v2.jpg' %}"
+                            data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 5 %}.jpg"
                              alt="image"
                                 class="img-fluid lazy" />
                         </a>
