--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -45,8 +45,8 @@ Best Safety Training and Certification Courses Online | pdhsafety.com
                 <div class="row">
                     <div class="col">
                         <div class="sp-badge-panel">
-                            <a href="#bundles" aria-label="Buy All Exam Preparation Courses at One Low Price $199" class="sp-badge ">
-                                <span>Buy All Exam Preparation Courses at One Low Price $199</span>
+                            <a href="#bundles" aria-label="Buy All Exam Preparation Courses at One Low Price" class="sp-badge ">
+                                <span>Buy All Exam Preparation Courses at One Low Price</span>
                             </a>
                         </div>
                     
@@ -60,6 +60,9 @@ Best Safety Training and Certification Courses Online | pdhsafety.com
                     <div class="card">
                         <div class="card-body p-1 text-center">
                             {{subject.page_details}}
+                            <p class="font-weight-bold">
+                                You will be awarded a certificate instantly.
+                            </p>
                         </div>
                     </div>
                 </div>
