--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -95,16 +95,26 @@
          <div class="container">
             <div class="row align-items-center">
                <div class="col-lg-6 col-md-6">
+                 
+
                   <ul class="header-contact">
-                     <li>
+                     {% comment %} <li>
                         <span>Call :</span>
                         +914-473-6791
-                     </li>
+                     </li> {% endcomment %}
                      <li>
                         <span>Email :</span>
                         <a class="text-white" title="mail@pdhsafety.com" href="mailto:mail@pdhsafety.com">mail@pdhsafety.com</a>
                      </li>
                   </ul>
+                  <div class="header-socials">
+                     <ul>
+                         <li><a title="facebook" target="_blank" href="https://www.facebook.com/people/NYC-Construction-Safety-Training/61561593072255/"><i class="fab fa-facebook-f"></i></a></li>
+                         <li><a title="x" target="_blank" href="https://x.com/nyc_safety"><i class="fab fa-twitter"></i></a></li>
+                         <li><a title="linkedin" target="_blank" href="https://www.linkedin.com/company/nyc-construction-safety-training/"><i class="fab fa-linkedin"></i></a></li>
+                         <li><a title="instagram" target="_blank" href="https://www.instagram.com/nyccst/"><i class="fab fa-pinterest"></i></a></li>
+                     </ul>
+                 </div>
                </div>
                <div class="col-lg-6 col-md-6">
                   <div class="header-right float-right">
@@ -300,24 +310,24 @@
                   <ul class="list-inline footer-socials">
                      <li class="list-inline-item">
                         <a title="facebook" target="_blank"
-                           href="https://www.facebook.com/CSP-Exam-Prep-103671192415440/?ref=pages_you_manage"
+                           href="https://www.facebook.com/people/NYC-Construction-Safety-Training/61561593072255/"
                            aria-label="Facebook">
                            <i class="fab fa-facebook-f"></i>
                         </a>
                      </li>
                      <li title="twitter" class="list-inline-item">
-                        <a title="twitter" href="https://twitter.com/FedericoRoca007" target="_blank" aria-label="Twitter">
+                        <a title="twitter" href="https://x.com/nyc_safety" target="_blank" aria-label="Twitter">
                            <i class="fab fa-twitter"></i>
                         </a>
                      </li>
                      <li class="list-inline-item">
                         <a title="linkedin" target="_blank" aria-label="Linkedin"
-                           href="https://www.linkedin.com/in/federico-roca-asp-64aa3a54/">
+                           href="https://www.linkedin.com/company/nyc-construction-safety-training/">
                            <i class="fab fa-linkedin"></i>
                         </a>
                      </li>
                      <li class="list-inline-item" aria-label="Pinterest">
-                        <a title="instagram" class="pinterest" href="https://www.instagram.com/federico.roca2020/" target="_blank" aria-label="Twitter">
+                        <a title="instagram" class="pinterest" href="https://www.instagram.com/nyccst/" target="_blank" aria-label="Twitter">
                            <i class="fab fa-pinterest"></i>
                         </a>
                      </li>
@@ -384,13 +394,13 @@
                   <h5 class="widget-title">Contact</h5>
 
                   <ul class="list-unstyled">
-                     <li>
+                     {% comment %} <li>
                         <i class="fa fa-phone"></i>
                         <div>
                            <strong>Phone number</strong>
                            +914-473-6791
                         </div>
-                     </li>
+                     </li> {% endcomment %}
                      <li>
                         <i class="far fa-envelope"></i>
                         <div>
