--- a/static/edutim/combine.css
+++ b/static/edutim/combine.css
@@ -68,6 +68,14 @@ and (min-resolution: 192dpi) {
     width: 100% !important;
    }
 
+   .header-socials-v2 {
+    float: right;
+   }
+
+    .header-socials-v2 li, .header-contact{
+    float: left;
+   }
+
   }
 
   @media only screen and (max-width: 280px) {
